fix horizontal scroll of ui-root div and other bug fixes

--- a/reader/reader.css
+++ b/reader/reader.css
@@ -44,26 +44,15 @@ body {
 #ui-root {
     display: flex;
     all:initial;
+    display: block;
     flex: 1;
         /* font-family: "Comic Sans MS", cursive; */
 
     font-family: Arial, Helvetica, sans-serif !important;
     line-height: 1.55;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-}
-
-.admin-bar #ui-root {
-    top: 32px;
-}
-
-@media screen and (max-width: 782px) {
-    .admin-bar #ui-root {
-        top: 46px;
-    }
+    height: 100vh;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 
 #MainContainer {
